add sign in links

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,3 @@
 <h1>Welcome to my Yelp Demo</h1>
-<h2>This is one of the sample applications for <a href="http://www.baserails.com">BaseRails</a></h2>
+<h2>This is one of the sample applications for <%= link_to "BaseRails", "http://www.baserails.com" %></h2>
 
