--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -25,6 +25,17 @@
 		</p>
 
 		<%= link_to "Write a Review", new_restaurant_review_path(@restaurant), class: 'btn btn-primary' %>
+
+		<br>
+		<br>
+
+		<iframe
+		  width="230"
+		  height="230"
+		  frameborder="0" style="border:0"
+		  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAkvdFiYOxz5eMCpVy7qwAp-zc-VTIeaTg
+		    &q=<%= @restaurant.address.parameterize %>&zoom=14">
+		</iframe>
 	</div>
 
 	<div class="col-md-9">
@@ -52,13 +63,6 @@
 			 				<td>
 				 				<div class="star-rating" data-score= <%= review.rating %> ></div>
 								<p><%= h(review.comment).gsub(/\n/, '<br/>').html_safe %></p>
-
-								<% if user_signed_in? %>
-									<% if (review.user == current_user) || (current_user.admin?) %>
-										<%= link_to "Edit", edit_restaurant_review_path(@restaurant, review) %>
-										<%= link_to "Delete", restaurant_review_path(@restaurant, review), method: :delete %>
-									<% end %>
-								<% end %>  
 							</td>
 						</tr>
 			 		<% end %>
